--- a/package.json
+++ b/package.json
@@ -6,9 +6,26 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
+    "jquery": "^3.6.0",
+    "language-tags": "^1.0.5",
+    "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-player": "^2.9.0",
+    "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "swiper": "^6.5.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
